// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`engine golden master > clean is unchanged 1`] = `
{
  "contract": {
    "cadenceMs": 86400000,
    "columns": [
      {
        "cadenceMs": 86400000,
        "cadenceSpread": 0,
        "domain": null,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "name": "record_date",
        "newest": 1786492800000,
        "nullRate": 0,
        "oldest": 1783123200000,
        "presentCount": 40,
        "type": "date",
      },
      {
        "cadenceMs": null,
        "cadenceSpread": null,
        "domain": null,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "name": "employee_id",
        "newest": null,
        "nullRate": 0,
        "oldest": null,
        "presentCount": 40,
        "type": "text",
      },
      {
        "cadenceMs": null,
        "cadenceSpread": null,
        "domain": null,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "name": "employee_name",
        "newest": null,
        "nullRate": 0,
        "oldest": null,
        "presentCount": 40,
        "type": "text",
      },
      {
        "cadenceMs": null,
        "cadenceSpread": null,
        "domain": [
          "Analytics",
          "Engineering",
          "Finance",
          "Operations",
        ],
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "name": "department",
        "newest": null,
        "nullRate": 0,
        "oldest": null,
        "presentCount": 40,
        "type": "categorical",
      },
      {
        "cadenceMs": null,
        "cadenceSpread": null,
        "domain": [
          "Analyst",
          "Associate",
          "Senior Analyst",
          "Team Lead",
          "VP",
        ],
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "name": "grade",
        "newest": null,
        "nullRate": 0,
        "oldest": null,
        "presentCount": 40,
        "type": "categorical",
      },
      {
        "cadenceMs": null,
        "cadenceSpread": null,
        "domain": null,
        "max": 138500,
        "mean": 109250,
        "median": 109250,
        "min": 80000,
        "name": "annual_salary_usd",
        "newest": null,
        "nullRate": 0,
        "oldest": null,
        "presentCount": 40,
        "type": "numeric",
      },
      {
        "cadenceMs": 259200000,
        "cadenceSpread": 0,
        "domain": null,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "name": "ended_on",
        "newest": 1790035200000,
        "nullRate": 0.65,
        "oldest": 1786665600000,
        "presentCount": 14,
        "type": "date",
      },
      {
        "cadenceMs": null,
        "cadenceSpread": null,
        "domain": [
          "N",
          "Y",
        ],
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "name": "is_current",
        "newest": null,
        "nullRate": 0,
        "oldest": null,
        "presentCount": 40,
        "type": "boolean",
      },
      {
        "cadenceMs": null,
        "cadenceSpread": null,
        "domain": null,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "name": "notes",
        "newest": null,
        "nullRate": 0.2,
        "oldest": null,
        "presentCount": 32,
        "type": "text",
      },
    ],
    "dateColumn": "record_date",
    "rowCount": 40,
    "sufficient": true,
  },
  "result": {
    "detail": "The new file matches everything the baseline file implies: same columns and types, same value meanings, current enough, and the numbers are in the shape they were.",
    "headline": "All four layers pass",
    "layers": [
      {
        "id": "schema",
        "note": null,
        "status": "PASS",
      },
      {
        "id": "semantics",
        "note": null,
        "status": "PASS",
      },
      {
        "id": "freshness",
        "note": null,
        "status": "PASS",
      },
      {
        "id": "distribution",
        "note": null,
        "status": "PASS",
      },
    ],
    "status": "PASS",
    "violations": [],
  },
}
`;

exports[`engine golden master > rowCountCollapse is unchanged 1`] = `
{
  "contract": {
    "cadenceMs": 86400000,
    "columns": [
      {
        "cadenceMs": 86400000,
        "cadenceSpread": 0,
        "domain": null,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "name": "record_date",
        "newest": 1786492800000,
        "nullRate": 0,
        "oldest": 1783123200000,
        "presentCount": 40,
        "type": "date",
      },
      {
        "cadenceMs": null,
        "cadenceSpread": null,
        "domain": null,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "name": "employee_id",
        "newest": null,
        "nullRate": 0,
        "oldest": null,
        "presentCount": 40,
        "type": "text",
      },
      {
        "cadenceMs": null,
        "cadenceSpread": null,
        "domain": null,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "name": "employee_name",
        "newest": null,
        "nullRate": 0,
        "oldest": null,
        "presentCount": 40,
        "type": "text",
      },
      {
        "cadenceMs": null,
        "cadenceSpread": null,
        "domain": [
          "Analytics",
          "Engineering",
          "Finance",
          "Operations",
        ],
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "name": "department",
        "newest": null,
        "nullRate": 0,
        "oldest": null,
        "presentCount": 40,
        "type": "categorical",
      },
      {
        "cadenceMs": null,
        "cadenceSpread": null,
        "domain": [
          "Analyst",
          "Associate",
          "Senior Analyst",
          "Team Lead",
          "VP",
        ],
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "name": "grade",
        "newest": null,
        "nullRate": 0,
        "oldest": null,
        "presentCount": 40,
        "type": "categorical",
      },
      {
        "cadenceMs": null,
        "cadenceSpread": null,
        "domain": null,
        "max": 138500,
        "mean": 109250,
        "median": 109250,
        "min": 80000,
        "name": "annual_salary_usd",
        "newest": null,
        "nullRate": 0,
        "oldest": null,
        "presentCount": 40,
        "type": "numeric",
      },
      {
        "cadenceMs": 259200000,
        "cadenceSpread": 0,
        "domain": null,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "name": "ended_on",
        "newest": 1790035200000,
        "nullRate": 0.65,
        "oldest": 1786665600000,
        "presentCount": 14,
        "type": "date",
      },
      {
        "cadenceMs": null,
        "cadenceSpread": null,
        "domain": [
          "N",
          "Y",
        ],
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "name": "is_current",
        "newest": null,
        "nullRate": 0,
        "oldest": null,
        "presentCount": 40,
        "type": "boolean",
      },
      {
        "cadenceMs": null,
        "cadenceSpread": null,
        "domain": null,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "name": "notes",
        "newest": null,
        "nullRate": 0.2,
        "oldest": null,
        "presentCount": 32,
        "type": "text",
      },
    ],
    "dateColumn": "record_date",
    "rowCount": 40,
    "sufficient": true,
  },
  "result": {
    "detail": "The new file has 12 rows against the baseline's 40 — 70.0% fewer. A jump that size usually means a partial load or a duplicated one, not a real change in volume.",
    "headline": "Distribution caught what Schema, Semantics and Freshness let through",
    "layers": [
      {
        "id": "schema",
        "note": null,
        "status": "PASS",
      },
      {
        "id": "semantics",
        "note": null,
        "status": "PASS",
      },
      {
        "id": "freshness",
        "note": null,
        "status": "PASS",
      },
      {
        "id": "distribution",
        "note": null,
        "status": "FAIL",
      },
    ],
    "status": "FAIL",
    "violations": [
      {
        "code": "row-count",
        "column": null,
        "evidence": "40 → 12 rows",
        "layer": "distribution",
        "message": "The new file has 12 rows against the baseline's 40 — 70.0% fewer. A jump that size usually means a partial load or a duplicated one, not a real change in volume.",
        "source": "baseline",
      },
    ],
  },
}
`;

exports[`engine golden master > salaries83x is unchanged 1`] = `
{
  "contract": {
    "cadenceMs": 86400000,
    "columns": [
      {
        "cadenceMs": 86400000,
        "cadenceSpread": 0,
        "domain": null,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "name": "record_date",
        "newest": 1786492800000,
        "nullRate": 0,
        "oldest": 1783123200000,
        "presentCount": 40,
        "type": "date",
      },
      {
        "cadenceMs": null,
        "cadenceSpread": null,
        "domain": null,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "name": "employee_id",
        "newest": null,
        "nullRate": 0,
        "oldest": null,
        "presentCount": 40,
        "type": "text",
      },
      {
        "cadenceMs": null,
        "cadenceSpread": null,
        "domain": null,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "name": "employee_name",
        "newest": null,
        "nullRate": 0,
        "oldest": null,
        "presentCount": 40,
        "type": "text",
      },
      {
        "cadenceMs": null,
        "cadenceSpread": null,
        "domain": [
          "Analytics",
          "Engineering",
          "Finance",
          "Operations",
        ],
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "name": "department",
        "newest": null,
        "nullRate": 0,
        "oldest": null,
        "presentCount": 40,
        "type": "categorical",
      },
      {
        "cadenceMs": null,
        "cadenceSpread": null,
        "domain": [
          "Analyst",
          "Associate",
          "Senior Analyst",
          "Team Lead",
          "VP",
        ],
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "name": "grade",
        "newest": null,
        "nullRate": 0,
        "oldest": null,
        "presentCount": 40,
        "type": "categorical",
      },
      {
        "cadenceMs": null,
        "cadenceSpread": null,
        "domain": null,
        "max": 138500,
        "mean": 109250,
        "median": 109250,
        "min": 80000,
        "name": "annual_salary_usd",
        "newest": null,
        "nullRate": 0,
        "oldest": null,
        "presentCount": 40,
        "type": "numeric",
      },
      {
        "cadenceMs": 259200000,
        "cadenceSpread": 0,
        "domain": null,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "name": "ended_on",
        "newest": 1790035200000,
        "nullRate": 0.65,
        "oldest": 1786665600000,
        "presentCount": 14,
        "type": "date",
      },
      {
        "cadenceMs": null,
        "cadenceSpread": null,
        "domain": [
          "N",
          "Y",
        ],
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "name": "is_current",
        "newest": null,
        "nullRate": 0,
        "oldest": null,
        "presentCount": 40,
        "type": "boolean",
      },
      {
        "cadenceMs": null,
        "cadenceSpread": null,
        "domain": null,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "name": "notes",
        "newest": null,
        "nullRate": 0.2,
        "oldest": null,
        "presentCount": 32,
        "type": "text",
      },
    ],
    "dateColumn": "record_date",
    "rowCount": 40,
    "sufficient": true,
  },
  "result": {
    "detail": "The typical value in "annual_salary_usd" is 83.0× larger than the baseline's: the median moved from 109,250 to 9,067,750 and the mean from 109,250 to 9,067,750. The column still parses as a number and still passes every check above it — but it is not measuring what it was.",
    "headline": "Distribution caught what Schema, Semantics and Freshness let through",
    "layers": [
      {
        "id": "schema",
        "note": null,
        "status": "PASS",
      },
      {
        "id": "semantics",
        "note": null,
        "status": "PASS",
      },
      {
        "id": "freshness",
        "note": null,
        "status": "PASS",
      },
      {
        "id": "distribution",
        "note": null,
        "status": "FAIL",
      },
    ],
    "status": "FAIL",
    "violations": [
      {
        "code": "central-shift",
        "column": "annual_salary_usd",
        "evidence": "median 109,250 → 9,067,750 (83.0×)",
        "layer": "distribution",
        "message": "The typical value in "annual_salary_usd" is 83.0× larger than the baseline's: the median moved from 109,250 to 9,067,750 and the mean from 109,250 to 9,067,750. The column still parses as a number and still passes every check above it — but it is not measuring what it was.",
        "source": "baseline",
      },
      {
        "code": "out-of-range",
        "column": "annual_salary_usd",
        "evidence": "40 of 40 values beyond [50,750, 167,750]",
        "layer": "distribution",
        "message": "100.0% of the values in "annual_salary_usd" sit outside anything the baseline ever contained (baseline ran 80,000 to 138,500; the new file reaches 6,640,000 to 1.15e+7).",
        "source": "baseline",
      },
    ],
  },
}
`;

exports[`engine golden master > stale is unchanged 1`] = `
{
  "contract": {
    "cadenceMs": 86400000,
    "columns": [
      {
        "cadenceMs": 86400000,
        "cadenceSpread": 0,
        "domain": null,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "name": "record_date",
        "newest": 1786492800000,
        "nullRate": 0,
        "oldest": 1783123200000,
        "presentCount": 40,
        "type": "date",
      },
      {
        "cadenceMs": null,
        "cadenceSpread": null,
        "domain": null,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "name": "employee_id",
        "newest": null,
        "nullRate": 0,
        "oldest": null,
        "presentCount": 40,
        "type": "text",
      },
      {
        "cadenceMs": null,
        "cadenceSpread": null,
        "domain": null,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "name": "employee_name",
        "newest": null,
        "nullRate": 0,
        "oldest": null,
        "presentCount": 40,
        "type": "text",
      },
      {
        "cadenceMs": null,
        "cadenceSpread": null,
        "domain": [
          "Analytics",
          "Engineering",
          "Finance",
          "Operations",
        ],
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "name": "department",
        "newest": null,
        "nullRate": 0,
        "oldest": null,
        "presentCount": 40,
        "type": "categorical",
      },
      {
        "cadenceMs": null,
        "cadenceSpread": null,
        "domain": [
          "Analyst",
          "Associate",
          "Senior Analyst",
          "Team Lead",
          "VP",
        ],
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "name": "grade",
        "newest": null,
        "nullRate": 0,
        "oldest": null,
        "presentCount": 40,
        "type": "categorical",
      },
      {
        "cadenceMs": null,
        "cadenceSpread": null,
        "domain": null,
        "max": 138500,
        "mean": 109250,
        "median": 109250,
        "min": 80000,
        "name": "annual_salary_usd",
        "newest": null,
        "nullRate": 0,
        "oldest": null,
        "presentCount": 40,
        "type": "numeric",
      },
      {
        "cadenceMs": 259200000,
        "cadenceSpread": 0,
        "domain": null,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "name": "ended_on",
        "newest": 1790035200000,
        "nullRate": 0.65,
        "oldest": 1786665600000,
        "presentCount": 14,
        "type": "date",
      },
      {
        "cadenceMs": null,
        "cadenceSpread": null,
        "domain": [
          "N",
          "Y",
        ],
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "name": "is_current",
        "newest": null,
        "nullRate": 0,
        "oldest": null,
        "presentCount": 40,
        "type": "boolean",
      },
      {
        "cadenceMs": null,
        "cadenceSpread": null,
        "domain": null,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "name": "notes",
        "newest": null,
        "nullRate": 0.2,
        "oldest": null,
        "presentCount": 32,
        "type": "text",
      },
    ],
    "dateColumn": "record_date",
    "rowCount": 40,
    "sufficient": true,
  },
  "result": {
    "detail": "The newest row in the new file is dated 2026-08-22, which is 32 days old. The baseline updates daily, so anything older than 3 days means the feed has stopped arriving.",
    "headline": "Freshness caught what Schema and Semantics let through",
    "layers": [
      {
        "id": "schema",
        "note": null,
        "status": "PASS",
      },
      {
        "id": "semantics",
        "note": null,
        "status": "PASS",
      },
      {
        "id": "freshness",
        "note": null,
        "status": "FAIL",
      },
      {
        "id": "distribution",
        "note": null,
        "status": "PASS",
      },
    ],
    "status": "FAIL",
    "violations": [
      {
        "code": "stale",
        "column": "record_date",
        "evidence": "newest 2026-08-22 · allowance 3× daily",
        "layer": "freshness",
        "message": "The newest row in the new file is dated 2026-08-22, which is 32 days old. The baseline updates daily, so anything older than 3 days means the feed has stopped arriving.",
        "source": "baseline",
      },
    ],
  },
}
`;

exports[`engine golden master > thinBaseline is unchanged 1`] = `
{
  "contract": {
    "cadenceMs": 86400000,
    "columns": [
      {
        "cadenceMs": 86400000,
        "cadenceSpread": 0,
        "domain": null,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "name": "record_date",
        "newest": 1786492800000,
        "nullRate": 0,
        "oldest": 1786147200000,
        "presentCount": 5,
        "type": "date",
      },
      {
        "cadenceMs": null,
        "cadenceSpread": null,
        "domain": null,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "name": "employee_id",
        "newest": null,
        "nullRate": 0,
        "oldest": null,
        "presentCount": 5,
        "type": "text",
      },
      {
        "cadenceMs": null,
        "cadenceSpread": null,
        "domain": null,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "name": "employee_name",
        "newest": null,
        "nullRate": 0,
        "oldest": null,
        "presentCount": 5,
        "type": "text",
      },
      {
        "cadenceMs": null,
        "cadenceSpread": null,
        "domain": [
          "Analytics",
          "Engineering",
          "Finance",
          "Operations",
        ],
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "name": "department",
        "newest": null,
        "nullRate": 0,
        "oldest": null,
        "presentCount": 5,
        "type": "categorical",
      },
      {
        "cadenceMs": null,
        "cadenceSpread": null,
        "domain": null,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "name": "grade",
        "newest": null,
        "nullRate": 0,
        "oldest": null,
        "presentCount": 5,
        "type": "text",
      },
      {
        "cadenceMs": null,
        "cadenceSpread": null,
        "domain": null,
        "max": 86000,
        "mean": 83000,
        "median": 83000,
        "min": 80000,
        "name": "annual_salary_usd",
        "newest": null,
        "nullRate": 0,
        "oldest": null,
        "presentCount": 5,
        "type": "numeric",
      },
      {
        "cadenceMs": 259200000,
        "cadenceSpread": null,
        "domain": null,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "name": "ended_on",
        "newest": 1790035200000,
        "nullRate": 0.6,
        "oldest": 1789776000000,
        "presentCount": 2,
        "type": "date",
      },
      {
        "cadenceMs": null,
        "cadenceSpread": null,
        "domain": [
          "N",
          "Y",
        ],
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "name": "is_current",
        "newest": null,
        "nullRate": 0,
        "oldest": null,
        "presentCount": 5,
        "type": "boolean",
      },
      {
        "cadenceMs": null,
        "cadenceSpread": null,
        "domain": null,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "name": "notes",
        "newest": null,
        "nullRate": 0.2,
        "oldest": null,
        "presentCount": 4,
        "type": "text",
      },
    ],
    "dateColumn": "record_date",
    "rowCount": 5,
    "sufficient": false,
  },
  "result": {
    "detail": "A contract can't be inferred: the baseline has only 5 rows — at least 8 are needed before a range or a cadence means anything. Load a larger baseline.",
    "headline": "Not enough data to validate",
    "layers": [
      {
        "id": "schema",
        "note": "A contract can't be inferred: the baseline has only 5 rows — at least 8 are needed before a range or a cadence means anything. Load a larger baseline.",
        "status": "SKIPPED",
      },
      {
        "id": "semantics",
        "note": "A contract can't be inferred: the baseline has only 5 rows — at least 8 are needed before a range or a cadence means anything. Load a larger baseline.",
        "status": "SKIPPED",
      },
      {
        "id": "freshness",
        "note": "A contract can't be inferred: the baseline has only 5 rows — at least 8 are needed before a range or a cadence means anything. Load a larger baseline.",
        "status": "SKIPPED",
      },
      {
        "id": "distribution",
        "note": "A contract can't be inferred: the baseline has only 5 rows — at least 8 are needed before a range or a cadence means anything. Load a larger baseline.",
        "status": "SKIPPED",
      },
    ],
    "status": "INSUFFICIENT",
    "violations": [],
  },
}
`;

exports[`engine golden master > tinyCandidate is unchanged 1`] = `
{
  "contract": {
    "cadenceMs": 86400000,
    "columns": [
      {
        "cadenceMs": 86400000,
        "cadenceSpread": 0,
        "domain": null,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "name": "record_date",
        "newest": 1786492800000,
        "nullRate": 0,
        "oldest": 1783123200000,
        "presentCount": 40,
        "type": "date",
      },
      {
        "cadenceMs": null,
        "cadenceSpread": null,
        "domain": null,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "name": "employee_id",
        "newest": null,
        "nullRate": 0,
        "oldest": null,
        "presentCount": 40,
        "type": "text",
      },
      {
        "cadenceMs": null,
        "cadenceSpread": null,
        "domain": null,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "name": "employee_name",
        "newest": null,
        "nullRate": 0,
        "oldest": null,
        "presentCount": 40,
        "type": "text",
      },
      {
        "cadenceMs": null,
        "cadenceSpread": null,
        "domain": [
          "Analytics",
          "Engineering",
          "Finance",
          "Operations",
        ],
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "name": "department",
        "newest": null,
        "nullRate": 0,
        "oldest": null,
        "presentCount": 40,
        "type": "categorical",
      },
      {
        "cadenceMs": null,
        "cadenceSpread": null,
        "domain": [
          "Analyst",
          "Associate",
          "Senior Analyst",
          "Team Lead",
          "VP",
        ],
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "name": "grade",
        "newest": null,
        "nullRate": 0,
        "oldest": null,
        "presentCount": 40,
        "type": "categorical",
      },
      {
        "cadenceMs": null,
        "cadenceSpread": null,
        "domain": null,
        "max": 138500,
        "mean": 109250,
        "median": 109250,
        "min": 80000,
        "name": "annual_salary_usd",
        "newest": null,
        "nullRate": 0,
        "oldest": null,
        "presentCount": 40,
        "type": "numeric",
      },
      {
        "cadenceMs": 259200000,
        "cadenceSpread": 0,
        "domain": null,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "name": "ended_on",
        "newest": 1790035200000,
        "nullRate": 0.65,
        "oldest": 1786665600000,
        "presentCount": 14,
        "type": "date",
      },
      {
        "cadenceMs": null,
        "cadenceSpread": null,
        "domain": [
          "N",
          "Y",
        ],
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "name": "is_current",
        "newest": null,
        "nullRate": 0,
        "oldest": null,
        "presentCount": 40,
        "type": "boolean",
      },
      {
        "cadenceMs": null,
        "cadenceSpread": null,
        "domain": null,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "name": "notes",
        "newest": null,
        "nullRate": 0.2,
        "oldest": null,
        "presentCount": 32,
        "type": "text",
      },
    ],
    "dateColumn": "record_date",
    "rowCount": 40,
    "sufficient": true,
  },
  "result": {
    "detail": "The column "department" held categorical values in the baseline but holds text values now.",
    "headline": "Schema caught it — the first gate the file had to pass",
    "layers": [
      {
        "id": "schema",
        "note": null,
        "status": "FAIL",
      },
      {
        "id": "semantics",
        "note": null,
        "status": "PASS",
      },
      {
        "id": "freshness",
        "note": null,
        "status": "PASS",
      },
      {
        "id": "distribution",
        "note": "The new file has only 3 rows — too few for a mean, a range or a null rate to describe anything. Distribution is not being judged.",
        "status": "SKIPPED",
      },
    ],
    "status": "FAIL",
    "violations": [
      {
        "code": "type-change",
        "column": "department",
        "evidence": "categorical → text",
        "layer": "schema",
        "message": "The column "department" held categorical values in the baseline but holds text values now.",
        "source": "baseline",
      },
      {
        "code": "type-change",
        "column": "grade",
        "evidence": "categorical → text",
        "layer": "schema",
        "message": "The column "grade" held categorical values in the baseline but holds text values now.",
        "source": "baseline",
      },
    ],
  },
}
`;

exports[`engine golden master > typeChange is unchanged 1`] = `
{
  "contract": {
    "cadenceMs": 86400000,
    "columns": [
      {
        "cadenceMs": 86400000,
        "cadenceSpread": 0,
        "domain": null,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "name": "record_date",
        "newest": 1786492800000,
        "nullRate": 0,
        "oldest": 1783123200000,
        "presentCount": 40,
        "type": "date",
      },
      {
        "cadenceMs": null,
        "cadenceSpread": null,
        "domain": null,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "name": "employee_id",
        "newest": null,
        "nullRate": 0,
        "oldest": null,
        "presentCount": 40,
        "type": "text",
      },
      {
        "cadenceMs": null,
        "cadenceSpread": null,
        "domain": null,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "name": "employee_name",
        "newest": null,
        "nullRate": 0,
        "oldest": null,
        "presentCount": 40,
        "type": "text",
      },
      {
        "cadenceMs": null,
        "cadenceSpread": null,
        "domain": [
          "Analytics",
          "Engineering",
          "Finance",
          "Operations",
        ],
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "name": "department",
        "newest": null,
        "nullRate": 0,
        "oldest": null,
        "presentCount": 40,
        "type": "categorical",
      },
      {
        "cadenceMs": null,
        "cadenceSpread": null,
        "domain": [
          "Analyst",
          "Associate",
          "Senior Analyst",
          "Team Lead",
          "VP",
        ],
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "name": "grade",
        "newest": null,
        "nullRate": 0,
        "oldest": null,
        "presentCount": 40,
        "type": "categorical",
      },
      {
        "cadenceMs": null,
        "cadenceSpread": null,
        "domain": null,
        "max": 138500,
        "mean": 109250,
        "median": 109250,
        "min": 80000,
        "name": "annual_salary_usd",
        "newest": null,
        "nullRate": 0,
        "oldest": null,
        "presentCount": 40,
        "type": "numeric",
      },
      {
        "cadenceMs": 259200000,
        "cadenceSpread": 0,
        "domain": null,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "name": "ended_on",
        "newest": 1790035200000,
        "nullRate": 0.65,
        "oldest": 1786665600000,
        "presentCount": 14,
        "type": "date",
      },
      {
        "cadenceMs": null,
        "cadenceSpread": null,
        "domain": [
          "N",
          "Y",
        ],
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "name": "is_current",
        "newest": null,
        "nullRate": 0,
        "oldest": null,
        "presentCount": 40,
        "type": "boolean",
      },
      {
        "cadenceMs": null,
        "cadenceSpread": null,
        "domain": null,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "name": "notes",
        "newest": null,
        "nullRate": 0.2,
        "oldest": null,
        "presentCount": 32,
        "type": "text",
      },
    ],
    "dateColumn": "record_date",
    "rowCount": 40,
    "sufficient": true,
  },
  "result": {
    "detail": "The new file matches everything the baseline file implies: same columns and types, same value meanings, current enough, and the numbers are in the shape they were.",
    "headline": "All four layers pass",
    "layers": [
      {
        "id": "schema",
        "note": null,
        "status": "PASS",
      },
      {
        "id": "semantics",
        "note": null,
        "status": "PASS",
      },
      {
        "id": "freshness",
        "note": null,
        "status": "PASS",
      },
      {
        "id": "distribution",
        "note": null,
        "status": "PASS",
      },
    ],
    "status": "PASS",
    "violations": [],
  },
}
`;

exports[`engine golden master > unitShift is unchanged 1`] = `
{
  "contract": {
    "cadenceMs": 86400000,
    "columns": [
      {
        "cadenceMs": 86400000,
        "cadenceSpread": 0,
        "domain": null,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "name": "record_date",
        "newest": 1786492800000,
        "nullRate": 0,
        "oldest": 1783123200000,
        "presentCount": 40,
        "type": "date",
      },
      {
        "cadenceMs": null,
        "cadenceSpread": null,
        "domain": null,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "name": "employee_id",
        "newest": null,
        "nullRate": 0,
        "oldest": null,
        "presentCount": 40,
        "type": "text",
      },
      {
        "cadenceMs": null,
        "cadenceSpread": null,
        "domain": null,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "name": "employee_name",
        "newest": null,
        "nullRate": 0,
        "oldest": null,
        "presentCount": 40,
        "type": "text",
      },
      {
        "cadenceMs": null,
        "cadenceSpread": null,
        "domain": [
          "Analytics",
          "Engineering",
          "Finance",
          "Operations",
        ],
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "name": "department",
        "newest": null,
        "nullRate": 0,
        "oldest": null,
        "presentCount": 40,
        "type": "categorical",
      },
      {
        "cadenceMs": null,
        "cadenceSpread": null,
        "domain": [
          "Analyst",
          "Associate",
          "Senior Analyst",
          "Team Lead",
          "VP",
        ],
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "name": "grade",
        "newest": null,
        "nullRate": 0,
        "oldest": null,
        "presentCount": 40,
        "type": "categorical",
      },
      {
        "cadenceMs": null,
        "cadenceSpread": null,
        "domain": null,
        "max": 138500,
        "mean": 109250,
        "median": 109250,
        "min": 80000,
        "name": "annual_salary_usd",
        "newest": null,
        "nullRate": 0,
        "oldest": null,
        "presentCount": 40,
        "type": "numeric",
      },
      {
        "cadenceMs": 259200000,
        "cadenceSpread": 0,
        "domain": null,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "name": "ended_on",
        "newest": 1790035200000,
        "nullRate": 0.65,
        "oldest": 1786665600000,
        "presentCount": 14,
        "type": "date",
      },
      {
        "cadenceMs": null,
        "cadenceSpread": null,
        "domain": [
          "N",
          "Y",
        ],
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "name": "is_current",
        "newest": null,
        "nullRate": 0,
        "oldest": null,
        "presentCount": 40,
        "type": "boolean",
      },
      {
        "cadenceMs": null,
        "cadenceSpread": null,
        "domain": null,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "name": "notes",
        "newest": null,
        "nullRate": 0.2,
        "oldest": null,
        "presentCount": 32,
        "type": "text",
      },
    ],
    "dateColumn": "record_date",
    "rowCount": 40,
    "sufficient": true,
  },
  "result": {
    "detail": "The values in "annual_salary_usd" are almost exactly 100× larger than the baseline's, which is the signature of a unit change (dollars → cents, or a 0–1 fraction rewritten as a percentage) rather than a change in the underlying reality.",
    "headline": "Semantics caught what Schema let through",
    "layers": [
      {
        "id": "schema",
        "note": null,
        "status": "PASS",
      },
      {
        "id": "semantics",
        "note": null,
        "status": "FAIL",
      },
      {
        "id": "freshness",
        "note": null,
        "status": "PASS",
      },
      {
        "id": "distribution",
        "note": null,
        "status": "FAIL",
      },
    ],
    "status": "FAIL",
    "violations": [
      {
        "code": "unit-shift",
        "column": "annual_salary_usd",
        "evidence": "median 109,250 → 1.09e+7",
        "layer": "semantics",
        "message": "The values in "annual_salary_usd" are almost exactly 100× larger than the baseline's, which is the signature of a unit change (dollars → cents, or a 0–1 fraction rewritten as a percentage) rather than a change in the underlying reality.",
        "source": "baseline",
      },
      {
        "code": "central-shift",
        "column": "annual_salary_usd",
        "evidence": "median 109,250 → 1.09e+7 (100×)",
        "layer": "distribution",
        "message": "The typical value in "annual_salary_usd" is 100× larger than the baseline's: the median moved from 109,250 to 1.09e+7 and the mean from 109,250 to 1.09e+7. The column still parses as a number and still passes every check above it — but it is not measuring what it was.",
        "source": "baseline",
      },
      {
        "code": "out-of-range",
        "column": "annual_salary_usd",
        "evidence": "40 of 40 values beyond [50,750, 167,750]",
        "layer": "distribution",
        "message": "100.0% of the values in "annual_salary_usd" sit outside anything the baseline ever contained (baseline ran 80,000 to 138,500; the new file reaches 8,000,000 to 1.39e+7).",
        "source": "baseline",
      },
    ],
  },
}
`;

exports[`engine golden master > unknownGrade is unchanged 1`] = `
{
  "contract": {
    "cadenceMs": 86400000,
    "columns": [
      {
        "cadenceMs": 86400000,
        "cadenceSpread": 0,
        "domain": null,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "name": "record_date",
        "newest": 1786492800000,
        "nullRate": 0,
        "oldest": 1783123200000,
        "presentCount": 40,
        "type": "date",
      },
      {
        "cadenceMs": null,
        "cadenceSpread": null,
        "domain": null,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "name": "employee_id",
        "newest": null,
        "nullRate": 0,
        "oldest": null,
        "presentCount": 40,
        "type": "text",
      },
      {
        "cadenceMs": null,
        "cadenceSpread": null,
        "domain": null,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "name": "employee_name",
        "newest": null,
        "nullRate": 0,
        "oldest": null,
        "presentCount": 40,
        "type": "text",
      },
      {
        "cadenceMs": null,
        "cadenceSpread": null,
        "domain": [
          "Analytics",
          "Engineering",
          "Finance",
          "Operations",
        ],
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "name": "department",
        "newest": null,
        "nullRate": 0,
        "oldest": null,
        "presentCount": 40,
        "type": "categorical",
      },
      {
        "cadenceMs": null,
        "cadenceSpread": null,
        "domain": [
          "Analyst",
          "Associate",
          "Senior Analyst",
          "Team Lead",
          "VP",
        ],
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "name": "grade",
        "newest": null,
        "nullRate": 0,
        "oldest": null,
        "presentCount": 40,
        "type": "categorical",
      },
      {
        "cadenceMs": null,
        "cadenceSpread": null,
        "domain": null,
        "max": 138500,
        "mean": 109250,
        "median": 109250,
        "min": 80000,
        "name": "annual_salary_usd",
        "newest": null,
        "nullRate": 0,
        "oldest": null,
        "presentCount": 40,
        "type": "numeric",
      },
      {
        "cadenceMs": 259200000,
        "cadenceSpread": 0,
        "domain": null,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "name": "ended_on",
        "newest": 1790035200000,
        "nullRate": 0.65,
        "oldest": 1786665600000,
        "presentCount": 14,
        "type": "date",
      },
      {
        "cadenceMs": null,
        "cadenceSpread": null,
        "domain": [
          "N",
          "Y",
        ],
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "name": "is_current",
        "newest": null,
        "nullRate": 0,
        "oldest": null,
        "presentCount": 40,
        "type": "boolean",
      },
      {
        "cadenceMs": null,
        "cadenceSpread": null,
        "domain": null,
        "max": null,
        "mean": null,
        "median": null,
        "min": null,
        "name": "notes",
        "newest": null,
        "nullRate": 0.2,
        "oldest": null,
        "presentCount": 32,
        "type": "text",
      },
    ],
    "dateColumn": "record_date",
    "rowCount": 40,
    "sufficient": true,
  },
  "result": {
    "detail": "The column "grade" now contains 1 value the baseline never had — "Consumer" — covering 12.5% of its rows. Either the vocabulary changed upstream or something is writing into the wrong field.",
    "headline": "Semantics caught what Schema let through",
    "layers": [
      {
        "id": "schema",
        "note": null,
        "status": "PASS",
      },
      {
        "id": "semantics",
        "note": null,
        "status": "FAIL",
      },
      {
        "id": "freshness",
        "note": null,
        "status": "PASS",
      },
      {
        "id": "distribution",
        "note": null,
        "status": "PASS",
      },
    ],
    "status": "FAIL",
    "violations": [
      {
        "code": "new-category",
        "column": "grade",
        "evidence": "baseline domain: "Analyst", "Associate", "Senior Analyst", "Team Lead", "VP"",
        "layer": "semantics",
        "message": "The column "grade" now contains 1 value the baseline never had — "Consumer" — covering 12.5% of its rows. Either the vocabulary changed upstream or something is writing into the wrong field.",
        "source": "baseline",
      },
    ],
  },
}
`;
